forked aave works

--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
 # Mnemonic, only first address will be used
-MNEMONIC=""
+MNEMONIC="receive youth basket unlock during imitate hollow skate vivid square pilot order"
 
 # Add Alchemy or Infura provider keys, alchemy takes preference at the config level
-ALCHEMY_KEY=""
-INFURA_KEY="https://mainnet.infura.io/v3/1cad81887e224784a4d2ad2db5c0587a"
+ALCHEMY_KEY="KfL7cddimeJa7pdiPbc2-kzo5RobzZZ3"
 
 
 
