localhost node working, need to figure out how to give DAI to an address

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hardhat:avalanche": "hardhat --network avalanche",
     "compile": "SKIP_LOAD=true hardhat compile",
     "console:fork": "FORK=main hardhat console",
+    "console:localhost:fork": "FORK=main hardhat console --network localhost",
     "test": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/scenario.spec.ts",
     "test-liquidation": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/liquidation-atoken.spec.ts",
     "test-amm": "npm run compile && TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-amm/*.spec.ts",
@@ -58,6 +59,8 @@
     "aave:ropsten:full:migration": "npm run compile && npm run hardhat:ropsten -- aave:mainnet --verify",
     "aave:fork:main:tenderly": "npm run compile && npm run hardhat:tenderly-main -- aave:mainnet",
     "aave:fork:main": "npm run compile && FORK=main hardhat aave:mainnet",
+    "vmex:node:fork:main": "FORK=main npx hardhat node",
+    "vmex:deploy": "npm run compile && FORK=main hardhat aave:mainnet --network localhost",
     "aave:fork:kovan": "npm run compile && FORK=kovan hardhat aave:mainnet",
     "amm:fork:main": "npm run compile && FORK=main hardhat amm:mainnet",
     "amm:fork:kovan": "npm run compile && FORK=kovan hardhat amm:mainnet",
