--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
   "license": "AGPLv3",
   "dependencies": {
     "axios-curlirize": "^1.3.7",
+    "lodash": "^4.17.21",
     "tmp-promise": "^3.0.2"
   },
   "keywords": [
