--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aave/protocol-v2",
+  "name": "vmex-sdk",
   "version": "1.0.1",
   "description": "Aave Protocol V2 smart contracts",
   "files": [
