--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "run-env": "npm i && tail -f /dev/null",
     "hardhat": "hardhat",
     "build": "tsc",
+    "start:dev": "yarn vmex:node:fork:main && yarn vmex:deploy",
     "scripts:priceFeed": "hardhat run scripts/test-priceFeed.ts",
     "scripts:userBalance": "hardhat run scripts/test-userBalance.ts",
     "hardhat:kovan": "hardhat --network kovan",
@@ -178,6 +179,7 @@
   "license": "AGPLv3",
   "dependencies": {
     "axios-curlirize": "^1.3.7",
+    "concurrently": "^7.3.0",
     "hardhat-deploy": "^0.11.12",
     "lodash": "^4.17.21",
     "tmp-promise": "^3.0.2"
