--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "ethers": "^5.0.19",
     "globby": "^11.0.1",
     "hardhat": "^2.2.0",
+    "hardhat-contract-sizer": "^2.6.1",
     "hardhat-gas-reporter": "^1.0.0",
     "hardhat-typechain": "^0.3.3",
     "husky": "^4.2.5",
