--- a/package.json
+++ b/package.json
@@ -66,8 +66,7 @@
     "aave:fork:main": "npm run compile && FORK=main hardhat aave:mainnet",
     "vmex:node:fork:main": "FORK=main npx hardhat node",
     "vmex:deploy": "npm run compile && FORK=main hardhat aave:mainnet --network localhost",
-    "vmex:test-scenarios": "FORK=main hardhat test ./test-suites/test-aave/scenario-mainnetfork.spec.ts --network localhost",
-    "vmex:unit-tests": "FORK=main hardhat test ./localhost_tests/test-collateralCap.spec.ts --network localhost",
+    "vmex:mainnetfork:unit-tests": "FORK=main hardhat test ./localhost_tests/*.spec.ts --network localhost",
     "aave:fork:kovan": "npm run compile && FORK=kovan hardhat aave:mainnet",
     "amm:fork:main": "npm run compile && FORK=main hardhat amm:mainnet",
     "amm:fork:kovan": "npm run compile && FORK=kovan hardhat amm:mainnet",
