+ grep for tests + utils getTrancheNames

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "build": "yarn tsc",
-    "test": "yarn build && mocha --reporter spec"
+    "test": "yarn build && mocha --reporter spec",
+    "test:specific": "mocha --reporter spec -- --grep"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.4",
