--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -10,6 +10,8 @@
     "chai": "^4.3.6",
     "chai-bignumber": "^3.1.0",
     "cross-env": "^7.0.3",
+    "node-ts-cache": "^4.4.0",
+    "node-ts-cache-storage-memory": "^4.4.0",
     "ts-node": "^10.9.1"
   },
   "scripts": {
