--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "build": "yarn tsc",
-    "test": "yarn build && mocha --reporter spec",
+    "test": "yarn build && mocha --timeout 20000 --reporter spec",
     "test:specific": "mocha --reporter spec -- --grep",
     "fund:accounts": "mocha dev --reporter spec"
   },
