--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   ],
   "scripts": {
     "contracts": "yarn workspace @vmex/contracts",
-    "sdk": "yarn workspace @vmex/sdk"
+    "sdk": "yarn workspace @vmex/sdk",
+    "start:dev": "yarn contracts compile && yarn sdk build && yarn contracts start:dev && yarn sdk fund:accounts"
   },
   "dependencies": {
     "ts-node": "^10.9.1",
