fix strategy helper library

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -192,6 +192,9 @@
     "David Truong <david@aave.com>"
   ],
   "license": "AGPLv3",
+  "dependencies": {
+    "hardhat": "^2.12.4"
+  },
   "keywords": [
     "aave",
     "protocol",
