--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -2,7 +2,7 @@
   "name": "@vmex/contracts",
   "version": "1.0.1",
   "description": "VMEX V1 smart contracts",
-  "private": "false",
+  "private": "true",
   "files": [
     "contracts",
     "artifacts",
