--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@vmex/sdk",
   "version": "1.0.1",
-  "description": "vmex finance sdk",
+  "description": "VMEX Finance - Software Development Kit",
   "main": "dist/index.js",
   "author": "VMEX finance",
   "license": "MIT",
-  "private": false,
+  "private": "false",
   "dependencies": {
     "chai": "^4.3.6",
     "chai-bignumber": "^3.1.0",
