--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "author": "VMEX finance",
   "license": "MIT",
-  "private": "false",
+  "private": false,
   "dependencies": {
     "chai": "^4.3.6",
     "chai-bignumber": "^3.1.0",
