--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -30,5 +30,6 @@
     "lodash": "^4.17.21",
     "mocha": "^10.1.0",
     "typescript": "^4.8.4"
-  }
+  },
+  "gitHead": "360ac9cfc0d1c79e7a1e2db90cd933d49dde2b4d"
 }
