--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vmex/sdk",
-  "version": "1.0.1-alpha.0",
+  "version": "1.0.1",
   "description": "VMEX Finance - Software Development Kit",
   "main": "dist/index.js",
   "author": "VMEX finance",
@@ -31,5 +31,5 @@
     "mocha": "^10.1.0",
     "typescript": "^4.8.4"
   },
-  "gitHead": "360ac9cfc0d1c79e7a1e2db90cd933d49dde2b4d"
+  "gitHead": "e8d50f647c0a382a607fd635077c10514d7dd338"
 }
