--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-//registry.npmjs.org/:_authToken=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
+//registry.npmjs.org/vmex-finance:_authToken=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
 access=public
