--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vmex/contracts",
-  "version": "1.0.1",
+  "version": "0.0.6",
   "description": "VMEX V1 smart contracts",
   "private": true,
   "files": [
@@ -138,11 +138,13 @@
     "@types/lowdb": "1.0.9",
     "@types/mocha": "7.0.2",
     "@types/node": "14.0.5",
+    "axios-curlirize": "^1.3.7",
     "bignumber.js": "9.0.0",
     "buidler-typechain": "0.1.1",
     "chai": "4.2.0",
     "chai-bignumber": "3.0.0",
     "chai-bn": "^0.2.1",
+    "concurrently": "^7.3.0",
     "cross-env": "^7.0.3",
     "defender-relay-client": "^1.7.0",
     "dotenv": "^8.2.0",
@@ -153,16 +155,19 @@
     "globby": "^11.0.1",
     "hardhat": "^2.12.0",
     "hardhat-contract-sizer": "^2.6.1",
+    "hardhat-deploy": "^0.11.12",
     "hardhat-gas-reporter": "^1.0.0",
     "hardhat-test-utils": "^0.1.1",
     "hardhat-typechain": "^0.3.3",
     "husky": "^4.2.5",
+    "lodash": "^4.17.21",
     "lowdb": "1.0.0",
     "prettier": "^2.0.5",
     "prettier-plugin-solidity": "^1.0.0-alpha.53",
     "pretty-quick": "^2.0.1",
     "solidity-coverage": "^0.7.16",
     "temp-hardhat-etherscan": "^2.0.2",
+    "tmp-promise": "^3.0.2",
     "ts-generator": "^0.1.1",
     "ts-node": "^8.10.2",
     "tsdx": "^0.14.1",
@@ -170,12 +175,7 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.3.0",
     "typechain": "^4.0.0",
-    "typescript": "^4.0.5",
-    "axios-curlirize": "^1.3.7",
-    "concurrently": "^7.3.0",
-    "hardhat-deploy": "^0.11.12",
-    "lodash": "^4.17.21",
-    "tmp-promise": "^3.0.2"
+    "typescript": "^4.0.5"
   },
   "husky": {
     "hooks": {
@@ -192,8 +192,6 @@
     "David Truong <david@aave.com>"
   ],
   "license": "AGPLv3",
-  "dependencies": {
-  },
   "keywords": [
     "aave",
     "protocol",
