--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -2,7 +2,7 @@
   "name": "@vmex/contracts",
   "version": "0.0.6",
   "description": "VMEX V1 smart contracts",
-  "private": true,
+  "private": false,
   "files": [
     "contracts",
     "artifacts",
