uniswap fallback oracle implemented

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -118,7 +118,8 @@
     "print-config:kovan": "hardhat --network kovan print-config --pool Aave --data-provider 0xA1901785c29cBd48bfA74e46b67C736b26054fa4",
     "external:deploy-assets-kovan": "npm run compile && hardhat --network kovan external:deploy-new-asset --symbol ${SYMBOL} --verify",
     "external:deploy-assets-main": "npm run compile && hardhat --network main external:deploy-new-asset --symbol ${SYMBOL} --verify",
-    "prepublishOnly": "npm run compile"
+    "prepublishOnly": "npm run compile",
+    "get-uniswap-data": "ts-node helpers/get-uniswap-data.ts"
   },
   "devDependencies": {
     "@nomiclabs/buidler": "^1.4.7",
