deployed everything on Goerli, included addresses

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -33,8 +33,10 @@
     "test-subgraph:scenarios": "npm run compile && hardhat --network hardhatevm_docker test test-suites/test-aave/__setup.spec.ts test-suites/test-aave/subgraph-scenarios.spec.ts",
     "test:main:check-list": "npm run compile && FORK=main TS_NODE_TRANSPILE_ONLY=1 hardhat test  test-suites/test-aave/__setup.spec.ts test-suites/test-aave/mainnet/check-list.spec.ts",
     "vmex:node:fork:main": "FORK=main npx hardhat node --hostname 0.0.0.0",
+    "vmex:node": "npx hardhat node --hostname 0.0.0.0",
     "vmex:deploy": "npm run compile && FORK=main hardhat vmex:mainnet --network localhost",
-    "vmex:dev:deploy": "npm run compile && FORK=main hardhat vmex:dev --network localhost",
+    "vmex:dev:deploy": "npm run compile && hardhat vmex:dev --network localhost",
+    "vmex:goerli:deploy": "npm run compile && hardhat vmex:dev --network goerli",
     "vmex:dev:test": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/*.spec.ts --network localhost",
     "vmex:dev:test-unit": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/liquidation-yearn.spec.ts --network localhost",
     "vmex:mainnetfork:unit-tests": "FORK=main hardhat test ./localhost_tests/__setup.spec.ts ./localhost_tests/*.spec.ts --network localhost",
