--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vmexfinance/contracts",
-  "version": "1.0.4-alpha",
+  "version": "1.0.5-alpha",
   "description": "VMEX V1 smart contracts",
   "private": false,
   "files": [
@@ -62,6 +62,7 @@
     "vmex:main:full:migration": "npm run compile && npm run hardhat:main -- vmex:mainnet --verify",
     "vmex:main:full:initialize": "npm run compile && FORK=main full:initialize-tokens --pool Aave",
     "vmex:permtranche": "hardhat vmex:permissionless-tranches --network goerli",
+    "vmex:set-oracle": "hardhat vmex:set-oracle --network goerli",
     "prettier:check": "npx prettier -c 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test-suites/test-aave/**/*.ts'",
     "prettier:write": "prettier --write 'tasks/**/*.ts' 'contracts/**/*.sol' 'helpers/**/*.ts'  'test-suites/test-aave/**/*.ts'",
     "ci:test": "npm run compile && npm run test",
