--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@vmexfinance/contracts": "^1.0.5-alpha",
     "chai": "^4.3.6",
     "chai-bignumber": "^3.1.0",
     "cross-env": "^7.0.3",
