--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -27,7 +27,7 @@
     "console:localhost:fork": "FORK=main hardhat console --network localhost",
     "test": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/*.spec.ts",
     "test-coverage": "TS_NODE_TRANSPILE_ONLY=1 hardhat coverage --testfiles './test-suites/test-aave/*.spec.ts'",
-    "test-unit": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/asset-mappings.spec.ts",
+    "test-unit": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/upgradeability.spec.ts",
     "test-mainnet-fork": "FORK=main hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/scenario.spec.ts  --network localhost",
     "test-strategy": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/strategy/*.spec.ts",
     "test-scenarios": "npm run compile && npx hardhat test test-suites/test-aave/__setup.spec.ts test-suites/test-aave/scenario.spec.ts",
@@ -155,6 +155,7 @@
   ],
   "license": "AGPLv3",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.2",
     "hardhat": "^2.13.0",
     "mocha": "^10.2.0"
   },
