--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -25,7 +25,7 @@ jobs:
         run: yarn install
 
       - name: Compile
-        run: yarn compile
+        run: yarn contracts compile
 
       - name: Test
-        run: yarn test
+        run: yarn contracts test
