--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -12,7 +12,7 @@
     "run-env": "npm i && tail -f /dev/null",
     "hardhat": "hardhat",
     "build": "tsc",
-    "start:dev": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:main\"  \"yarn vmex:deploy\"",
+    "start:dev": "concurrently --restart-tries 3 --restart-after 20000 -n 'network,deployments' \"yarn vmex:node:fork:main\"  \"yarn vmex:deploy:fork:main\"",
     "scripts:priceFeed": "hardhat run scripts/test-priceFeed.ts",
     "scripts:userBalance": "hardhat run scripts/test-userBalance.ts",
     "hardhat:tenderly-main": "hardhat --network tenderly",
@@ -34,8 +34,10 @@
     "test-subgraph:scenarios": "npm run compile && hardhat --network hardhatevm_docker test test-suites/test-aave/__setup.spec.ts test-suites/test-aave/subgraph-scenarios.spec.ts",
     "test:main:check-list": "npm run compile && FORK=main TS_NODE_TRANSPILE_ONLY=1 hardhat test  test-suites/test-aave/__setup.spec.ts test-suites/test-aave/mainnet/check-list.spec.ts",
     "vmex:node:fork:main": "FORK=main npx hardhat node --hostname 0.0.0.0",
+    "vmex:node:fork:optimism": "FORK=optimism npx hardhat node --hostname 0.0.0.0",
     "vmex:node": "npx hardhat node --hostname 0.0.0.0",
-    "vmex:deploy": "npm run compile && FORK=main hardhat vmex:mainnet --network localhost",
+    "vmex:deploy:fork:main": "npm run compile && FORK=main hardhat vmex:mainnet --network localhost",
+    "vmex:deploy:fork:optimism": "npm run compile && FORK=optimism hardhat sidechain:mainnet --pool Optimism --network optimism_localhost",
     "vmex:dev:deploy": "npm run compile && hardhat vmex:dev --network localhost",
     "vmex:goerli:deploy": "npm run compile && hardhat vmex:dev --verify --network goerli",
     "vmex:dev:test": "TS_NODE_TRANSPILE_ONLY=1 hardhat test ./test-suites/test-aave/__setup.spec.ts  ./test-suites/test-aave/*.spec.ts --network localhost",
